--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,6 +27,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <!--<p class="lead"><i class="fas fa-chevron-left leftright"></i><span id="currentDay"></span><i class="fas fa-chevron-right leftright"></i></p>-->
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
@@ -34,5 +35,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
