add new feature for changing dates

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,8 +26,12 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-      <!--<p class="lead"><i class="fas fa-chevron-left leftright"></i><span id="currentDay"></span><i class="fas fa-chevron-right leftright"></i></p>-->
+      <!--<p id="currentDay" class="lead"></p>-->
+      <p class="lead">
+        <i id="prevDayIcon" class="fas fa-chevron-left leftright"></i>
+        <span id="currentDay"></span>
+        <i id="nextDayIcon" class="fas fa-chevron-right leftright"></i>
+      </p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
