add button to clear all old dates, change save date format

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,9 +32,13 @@
         <span id="currentDay"></span>
         <i id="nextDayIcon" class="fas fa-chevron-right leftright"></i>
       </p>
+      
     </header>
-    <div class="container">
+    <div id="time-blocks" class="container">
       <!-- Timeblocks go here -->
+    </div>
+    <div class="container">
+      <button id="clearPrevious" class="clearPreviousBtn dispNone">Delete All Old Blocks</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
